<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.5.3</version>
	</parent>

	<groupId>no.nav.dokdistdittnav</groupId>
	<artifactId>dokdistdittnav</artifactId>
	<packaging>pom</packaging>
	<version>1.0-SNAPSHOT</version>

	<modules>
		<module>app</module>
		<module>core</module>
		<module>qdist010</module>
		<module>kdist001</module>
		<module>kdist002</module>
	</modules>

	<properties>
		<java.version>21</java.version>

		<brukernotifikasjon.version>2.6.0</brukernotifikasjon.version>
		<kafka-avro-serializer.version>7.9.2</kafka-avro-serializer.version>
		<teamdokumenthandtering-avro-schemas.version>1.1.6</teamdokumenthandtering-avro-schemas.version>
		<camel.version>4.13.0</camel.version>
		<logstash-logback-encoder.version>8.1</logstash-logback-encoder.version>
		<com.ibm.mq.jakarta.client.version>9.4.3.0</com.ibm.mq.jakarta.client.version>
		<dok-melding-virksomhet-dokdistfordeling.version>41-d282678</dok-melding-virksomhet-dokdistfordeling.version>
		<resilience4j.version>2.3.0</resilience4j.version>

		<!-- Test -->
		<commons-io.version>2.19.0</commons-io.version>
		<spring-cloud-contract-wiremock.version>4.3.0</spring-cloud-contract-wiremock.version>

		<!-- Plugins -->
		<maven-toolchains-plugin.version>3.2.0</maven-toolchains-plugin.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>no.nav.dokdistdittnav</groupId>
				<artifactId>app</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.dokdistdittnav</groupId>
				<artifactId>core</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.dokdistdittnav</groupId>
				<artifactId>qdist010</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.dokdistdittnav</groupId>
				<artifactId>kdist001</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.dokdistdittnav</groupId>
				<artifactId>kdist002</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.camel.springboot</groupId>
				<artifactId>camel-spring-boot-bom</artifactId>
				<version>${camel.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>io.github.resilience4j</groupId>
				<artifactId>resilience4j-spring-boot3</artifactId>
				<version>${resilience4j.version}</version>
			</dependency>

			<!-- Kafka -->
			<dependency>
				<groupId>no.nav.teamdokumenthandtering</groupId>
				<artifactId>teamdokumenthandtering-avro-schemas</artifactId>
				<version>${teamdokumenthandtering-avro-schemas.version}</version>
			</dependency>
			<dependency>
				<groupId>com.github.navikt</groupId>
				<artifactId>brukernotifikasjon-schemas</artifactId>
				<version>${brukernotifikasjon.version}</version>
			</dependency>
			<dependency>
				<groupId>io.confluent</groupId>
				<artifactId>kafka-avro-serializer</artifactId>
				<version>${kafka-avro-serializer.version}</version>
			</dependency>

			<dependency>
				<groupId>net.logstash.logback</groupId>
				<artifactId>logstash-logback-encoder</artifactId>
				<version>${logstash-logback-encoder.version}</version>
			</dependency>
			<dependency>
				<groupId>com.ibm.mq</groupId>
				<artifactId>com.ibm.mq.jakarta.client</artifactId>
				<version>${com.ibm.mq.jakarta.client.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.meldinger.virksomhet</groupId>
				<artifactId>dok-melding-virksomhet-dokdistfordeling</artifactId>
				<version>${dok-melding-virksomhet-dokdistfordeling.version}</version>
			</dependency>

			<!-- Test -->
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-contract-wiremock</artifactId>
				<version>${spring-cloud-contract-wiremock.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>${commons-io.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.apache.activemq</groupId>
				<artifactId>artemis-jakarta-server</artifactId>
				<version>${artemis.version}</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<scope>provided</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-toolchains-plugin</artifactId>
				<version>${maven-toolchains-plugin.version}</version>
				<executions>
					<execution>
						<goals>
							<goal>toolchain</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<toolchains>
						<jdk>
							<version>${java.version}</version>
							<vendor>openjdk</vendor>
						</jdk>
					</toolchains>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
